--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,8 +5,9 @@ include LICENSE
 include README.rst
 
 recursive-include tests *
-recursive-include tg_utils/locale *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat
+
+graft tg_utils/locale
