--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ env:
   - TOX_ENV=coverage
   - TOX_ENV=docs
 
+before_install:
+# For reasons: https://github.com/travis-ci/travis-ci/issues/4990
+  - if [[ $TOXENV =~ "py35" && -f ~/virtualenv/python3.5/bin/activate ]]; then source ~/virtualenv/python3.5/bin/activate; fi
+
 install:
   - pip install -U tox
 
