--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,12 @@
 [tox]
 envlist = py{34,35,36}-django{18,111,20}
 
+[travis:env]
+DJANGO =
+    1.8: django18
+    1.11: django111
+    2.0: django20
+
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
