--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ deploy:
     repo: thorgate/tg-utils
     tags: true
     python: "3.6"
-    condition: "2.0"
+    condition: "$DJANGO = 2.0"
 
 notifications:
   email: false
