Run linter and coverage via tox/Travis

--- a/tox.ini
+++ b/tox.ini
@@ -17,3 +17,6 @@ deps =
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     -r{toxinidir}/requirements_test.txt
+
+[testenv:py36-django20]
+commands = make test-full
