--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -3,6 +3,7 @@ coverage==4.2
 coveralls==1.1
 pytest-cov==2.4.0
 pytest-django==2.9.1
+python-redis-lock==3.2.0
 django_compressor==2.0
 hashids==1.1.0
 flake8==2.5.1
