--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21}
+envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21,22}
 
 [travis:env]
 DJANGO =
@@ -18,6 +18,7 @@ deps =
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
+    django22: Django>=2.2,<2.3
     -r{toxinidir}/requirements_test.txt
 
 [testenv:py36-django20]
