--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ DJANGO =
     1.11: django111
     2.0: django20
     2.1: django21
+    2.2: django22
 
 [testenv]
 setenv =
@@ -21,5 +22,5 @@ deps =
     django22: Django>=2.2,<2.3
     -r{toxinidir}/requirements_test.txt
 
-[testenv:py36-django20]
+[testenv:py36-django22]
 commands = make test-full
