--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - DJANGO=2.0
   - DJANGO=2.1
   - DJANGO=2.2
+  - DJANGO=3.0
 
 matrix:
   exclude:
@@ -20,6 +21,10 @@ matrix:
       env: DJANGO=2.1
     - python: "3.4"
       env: DJANGO=2.2
+    - python: "3.4"
+      env: DJANGO=3
+    - python: "3.5"
+      env: DJANGO=3
     - python: "3.7"
       env: DJANGO=1.8
     - python: "3.7"
