--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21,22}
+envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21,22},py{36,37}-django30
 
 [travis:env]
 DJANGO =
@@ -8,6 +8,7 @@ DJANGO =
     2.0: django20
     2.1: django21
     2.2: django22
+    3.0: django30
 
 [testenv]
 setenv =
@@ -20,6 +21,7 @@ deps =
     django20: Django>=2.0,<2.1
     django21: Django>=2.1,<2.2
     django22: Django>=2.2,<2.3
+    django30: Django>=3.0,<4
     -r{toxinidir}/requirements_test.txt
 
 [testenv:py36-django22]
