--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,28 @@
 [tox]
-envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21,22},py{36,37}-django30
+isolated_build = True
+envlist =
+    py37-django{22,30,31,32}
+    py{38,39}-django{22,30,31,32,40}
+    py310-django{32,40}
 
-[travis:env]
-DJANGO =
-    1.8: django18
-    1.11: django111
-    2.0: django20
-    2.1: django21
-    2.2: django22
-    3.0: django30
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-whitelist_externals = make
-commands = make test
-deps =
-    django18: Django>=1.8,<1.9
-    django111: Django>=1.11,<1.12
-    django20: Django>=2.0,<2.1
-    django21: Django>=2.1,<2.2
+whitelist_externals=make
+commands=make test
+deps=
     django22: Django>=2.2,<2.3
-    django30: Django>=3.0,<4
-    -r{toxinidir}/requirements_test.txt
+    django30: Django>=3.0,<3.1
+    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
 
-[testenv:py36-django22]
+[testenv:py310-django40]
 commands = make test-full
