--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,6 +35,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         poetry install
+
+    - name: Lint
+      run: |
+        poetry run make lint
+
     - name: Test with tox
       run: |
-        poetry run make test-all
+        poetry run make coverage
+
+    - name: Code Coverage Summary Report
+      uses: irongut/CodeCoverageSummary@v1.0.2
+      with:
+        filename: coverage.xml
+        format: 'markdown'
+        output: 'both'
