--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,6 +20,8 @@ jobs:
           - "3.8"
           - "3.9"
           - "3.10"
+          - "3.11"
+          - "3.12"
 
     steps:
     - uses: actions/checkout@v2
@@ -28,23 +30,23 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Add poetry
-      uses: abatilo/actions-poetry@v2.1.4
-      with:
-        poetry-version: "1.2.2"
+      uses: abatilo/actions-poetry@v2.4.0
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools
         poetry install
 
-    - name: Lint
+    - if: ${{ matrix.python-version == '3.11' }}
+      name: Lint
       run: |
         poetry run make lint
 
     - name: Test with tox
       run: |
-        poetry run make coverage
+        poetry run make test-all
 
-    - name: Code Coverage Summary Report
+    - if: ${{ matrix.python-version == '3.11' }}
+      name: Code Coverage Summary Report
       uses: irongut/CodeCoverageSummary@v1.0.2
       with:
         filename: coverage.xml
