--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,8 @@ isolated_build = True
 envlist =
     py37-django{22,30,31,32}
     py{38,39}-django{22,30,31,32,40}
-    py310-django{32,40}
+    py{310,311}-django{32,40,41,42,50}
+    py{312}-django{42,50}
 
 [gh-actions]
 python =
@@ -11,18 +12,24 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
+    3.12: py312
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
-whitelist_externals=make
+allowlist_externals=make
 commands=make test
+
 deps=
     django22: Django>=2.2,<2.3
     django30: Django>=3.0,<3.1
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
+    django41: Django>=4.1,<4.2
+    django42: Django>=4.2,<4.3
+    django50: Django>=5.0,<5.1
 
-[testenv:py310-django40]
+[testenv:py311-django50]
 commands = make test-full
