--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ python = ">=3.7.2,<4"
 
 django = ">=2.2"
 
-django-health-check = { version = "*", optional = true }
+django-health-check = { version = "<4", optional = true }
 hashids = { version = "*", optional = true }
 psutil = { version = "*", optional = true }
 python-redis-lock = { version = "*", optional = true }
@@ -41,24 +41,22 @@ redis = { version = "*", optional = true }
 requests = { version = "*", optional = true }
 yappi = { version = "*", optional = true }
 
-[tool.poetry.dev-dependencies]
+[poetry.group.dev.dependencies]
 pytest = "==7.*"
 coverage = "*"
 coveralls = "*"
 pytest-cov = "*"
 pytest-django = "*"
 pytest-xdist = "*"
-black = "==22.8.0"
-prospector = "^1.7.0"
-# pylint 2.15 is inconsitently crashing for some reason
-# Ref: https://github.com/PyCQA/pylint-django/issues/370
-pylint = "==2.14.*"
+black = "*"
+prospector = "*"
+pylint = "*"
 sphinx = "==3.*"
 tox = "*"
 tox-gh-actions = "*"
 
 django-compressor = "*"
-django-health-check = "*"
+django-health-check = "<4"
 psutil = "*"
 hashids = "*"
 python-redis-lock = "*"
