--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,10 @@ isolated_build = True
 envlist =
     py37-django{22,30,31,32}
     py{38,39}-django{22,30,31,32,40}
-    py{310,311}-django{32,40,41,42,50}
-    py{312}-django{42,50}
+    py{310,311}-django{32,40,41,42,50,51,52}
+    py{312}-django{42,50,51,52,60}
+    py{313}-django{42,51,52,60}
+    py{314}-django{52,60}
 
 [gh-actions]
 python =
@@ -14,6 +16,8 @@ python =
     3.10: py310
     3.11: py311
     3.12: py312
+    3.13: py313
+    3.14: py314
 
 [testenv]
 setenv =
@@ -30,6 +34,9 @@ deps=
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<4.3
     django50: Django>=5.0,<5.1
+    django51: Django>=5.1,<5.2
+    django52: Django>=5.2,<5.3
+    django60: Django>=6.0,<6.1
 
-[testenv:py311-django50]
+[testenv:py311-django52]
 commands = make test-full
